--- a/index.html
+++ b/index.html
@@ -37,5 +37,5 @@
 
     <script src="app.js" defer></script>
 </body>
-
+<script src="https://code.responsivevoice.org/responsivevoice.js?key=SP0X1V41"></script>
 </html>
